--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "aid-bundle": "index.js"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "standard"
   },
   "repository": {
     "type": "git",
@@ -36,5 +37,10 @@
   "devDependencies": {
     "@types/browserify": "^12.0.36",
     "standard": "^16.0.1"
+  },
+  "standard": {
+    "ignore": [
+      "lib/**"
+    ]
   }
 }
